- update ico and more

--- a/app/landing.ejs
+++ b/app/landing.ejs
@@ -27,8 +27,8 @@
                             </button>
                         </div>
                     </div>
-                    <div class="mediaDivider"></div>
-                    <div id="externalMedia">
+                    <div class="mediaDivider" style="display: none;"></div>
+                    <div id="externalMedia" style="display: none;">
                         <div class="mediaContainer">
                             <a href="https://github.com/dscalzi/HeliosLauncher" class="mediaURL" id="linkURL">
                                 <svg id="linkSVG" class="mediaSVG" viewBox="35.34 34.3575 70.68 68.71500">
@@ -95,12 +95,12 @@
         <div id="left">
             <div class="bot_wrapper">
                 <div id="content">
-                    <div id="server_status_wrapper">
+                    <div id="server_status_wrapper" style="display: none;">
                         <span class="bot_label" id="landingPlayerLabel">SERVER</span>
                         <span id="player_count">OFFLINE</span>
                     </div>
-                    <div class="bot_divider"></div>
-                    <div id="mojangStatusWrapper">
+                    <div class="bot_divider" style="display: none;"></div>
+                    <div id="mojangStatusWrapper" style="display: none;">
                         <span class="bot_label">MOJANG STATUS</span>
                         <span id="mojang_status_icon">&#8226;</span>
                         <div id="mojangStatusTooltip">
