--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -329,11 +329,11 @@
                     </div>
                 </div>
                 <div id="settingsAboutButtons">
-                    <a href="https://github.com/dscalZi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Source (GitHub)</a>
+                    <a href="" id="settingsAboutSourceButton" class="settingsAboutButton" style="display: none;">Source (GitHub)</a>
                     <!-- The following must be included in third-party usage. -->
                     <!-- <a href="https://github.com/dscalzi/HeliosLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Original Source</a> -->
-                    <a href="https://github.com/dscalZi/HeliosLauncher/issues" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
-                    <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">DevTools Console</a>
+                    <a href="" id="settingsAboutSupportButton" class="settingsAboutButton" style="display: none;">Support</a>
+                    <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton" style="display: none;">DevTools Console</a>
                 </div>
             </div>
             <div class="settingsChangelogContainer">
@@ -343,10 +343,12 @@
                         <div class="settingsChangelogTitle">Changelog</div>
                     </div>
                     <div class="settingsChangelogText">
-                        No Release Notes
+                        - Add changelogs usage here.
+                        - Patch notes for the current version will be displayed here.
+                        - Patch image
                     </div>
                 </div>
-                <div class="settingsChangelogActions">
+                <div class="settingsChangelogActions" style="display: none;">
                     <a class="settingsChangelogButton settingsAboutButton" href="#">View Release Notes on GitHub</a>
                 </div>
             </div>
