--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -343,9 +343,7 @@
                         <div class="settingsChangelogTitle">Changelog</div>
                     </div>
                     <div class="settingsChangelogText">
-                        - Add changelogs usage here.
-                        - Patch notes for the current version will be displayed here.
-                        - Patch image
+                        - Patch EOL of changelogs<br>
                     </div>
                 </div>
                 <div class="settingsChangelogActions" style="display: none;">
